@@ -74,9 +74,11 @@ require 'lobbyist/v2/base'
 require 'lobbyist/v2/authorization'
 require 'lobbyist/v2/category'
 require 'lobbyist/v2/company_setting'
+require 'lobbyist/v2/company_subscription'
 require 'lobbyist/v2/company_user'
 require 'lobbyist/v2/company'
 require 'lobbyist/v2/contact'
+require 'lobbyist/v2/customer_call_metrics'
 require 'lobbyist/v2/customer'
 require 'lobbyist/v2/data_upload'
 require 'lobbyist/v2/email_invitation_metrics'
